2014-09-21 Added library for Edge Animation module
2014-09-23 Added close button to Page Rating module
2014-09-23 Fixed issue with Navigation Bar on iPad with iOS8
2014-09-22 Fixed issue with Animation on iPads
2014-09-22 Fixed Connection module: hiding images does not occur anymore
2014-09-19 Fixed show answers in Text module
2014-09-19 Added new module: Pie Chart
2014-09-19 [IWB Toolbar] Unified date in notes, now notes appears always below panel
2014-09-18 Fixed problem with width and height in Ordering module
2014-09-17 Changed libraries to minified versions
2014-09-17 Fixed problem with doubled properties in Editor
2014-09-17 Fixed problem with loading progress circle in Editor
2014-09-17 Fixed problem with Player not loading in iframe embeded lessons
2014-09-16 [CheckAnswers] Fixed problem with backward compatibility checkAnswers modules
2014-09-16 Fixed problem with setting state in Multiple Gap module
2014-09-15 Fixed issue with loading resources on IE11 in Slideshow module
2014-09-15 Added "Custom toolbar" property to Paragraph module
2014-09-15 Fixed Image Viewer issue in mexican lesson
2014-09-15 Fixed eKeyboard issues on Android devices
2014-09-12 IWB Toolbar: fixed preview
2014-09-12 [Ordering] Added new property: Even width for all elements, to avoid problems with images in Safari
2014-09-12 IWB Toolbar: now you can hide unnecessary buttons
2014-09-12 Fixed problem with loading progress circle for other views than embed
2014-09-12 Fixed problem with propagation in IWB Toolbar module
2014-09-11 Changed time format in note in IWB Toolbar module
2014-09-11 Fixed problem with command stop on iPad in Text Audio module
2014-09-11 Fixed problem with double lines on Android 4.1.2 in Connection module
2014-09-11 Fixed drawing issue on Android 4.1.2 native browser in ShapeTracing module
2014-09-10 Changed Default Confirmation Alert Box to Custom in IWB Toolbar module
2014-09-10 Fixed drawing issue on IE 11 mobile browser in ShapeTracing addon